--- a/pom.xml
+++ b/pom.xml
@@ -40,14 +40,14 @@
             <version>2.0.1</version>
         </dependency>
         <dependency>
-            <groupId>com.marklogic.mapreduce</groupId>
+            <groupId>com.marklogic</groupId>
             <artifactId>marklogic-mapreduce2</artifactId>
-            <version>2.1.3</version>
+            <version>2.2.1</version>
         </dependency>
         <dependency>
-            <groupId>com.marklogic.xcc</groupId>
-            <artifactId>marklogic-xcc</artifactId>
-            <version>8.0.3</version>
+          <groupId>com.marklogic</groupId>
+          <artifactId>marklogic-xcc</artifactId>
+          <version>9.0.2</version>
         </dependency>
     </dependencies>
     <properties>
