--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,16 @@
             <artifactId>scala-library</artifactId>
             <version>2.10.4</version>
         </dependency>
+	<dependency>
+	  <groupId>org.apache.spark</groupId>
+	  <artifactId>spark-core_2.11</artifactId>
+	  <version>2.2.0</version>
+	  <scope>provided</scope>
+	</dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
-            <version>1.3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.10</artifactId>
-            <version>1.3.1</version>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
